Fix image overlap in post show

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -11,7 +11,7 @@
 
 .post-image {
   background: white;
-  height: 100%;
+  height: 250px;
   width: 100%;
   display: none;
   position: absolute;
